<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">eCommerces   Antonio J Morales</string>
    <string name="tv_selectCategoria">Seleccione categoría :</string>
    <string name="tv_bienvenido">Bienvenido</string>
    <string name="bt_mostrar_resultados">Mostrar resultados</string>
    <string name="tvname">tvName</string>
    <string name="tvDireccion">C/XXX, YYYY, (ZZZ)</string>
    <string name="tvDistancia">0 Km</string>
    <string name="tvLoad" tools:ignore="TypographyEllipsis">Cargando datos… por favor espere...</string>
    <string name="edDireccion">"Obtener dirección GPS, pulse icono inferior"</string>
    <string name="imGPS">Obtener ubicación GPS</string>
    <string name="tvCategoria">SHOPPING</string>
    <string name="tv_Dnombre">Nombre_Detalle</string>
    <string name="tv_Ddireccion">Direccion Detalle</string>
    <string name="tv_DshortDescription">Descripción corta de el eComercio</string>
    <string name="tv_Demail">Email detalle</string>
    <string name="tv_Dtelefono">Telefono Detalle</string>
    <string name="im_logo">Logo comercio</string>
    <string name="im_google_maps">Ir Google Maps</string>
    <string name="im_instagram">Ir a Instagram</string>
    <string name="im_fb">Ir a Twitter</string>
    <string name="im_twiter">Ir a Twitter</string>
    <string name="aviso_gps">"Pulse icono GPS y obtenga su dirección"</string>
    <string name="im_Demail">Enviar email</string>
    <string name="im_Dtelefono">Llamar por telefono</string>
    <string name="tv_LabelDnombre">NOMBRE e-COMERCIO</string>
    <string name="tv_LabelDdescShort">DESCRIPCIÓN</string>
    <string name="tv_LabelDdireccion">DIRECCIÓN</string>

    <string-array name="Categories">
        <item>SHOPPING</item>
        <item>FOOD</item>
        <item>BEAUTY</item>
        <item>LEISURE</item>
        <item>OTHER</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>