<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="antoniomy82.ecommerce_retrofitkotlin.DetailActivity">

    <ImageView
        android:id="@+id/imLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/im_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <TextView
        android:id="@+id/tv_Dnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Dnombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imLogo" />

    <TextView
        android:id="@+id/tv_Dcategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Dcategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Dnombre" />

    <TextView
        android:id="@+id/tv_Ddireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_Ddireccion"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Dcategoria" />

    <TextView
        android:id="@+id/tv_Demail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tv_Demail"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toEndOf="@+id/imEmail"
        app:layout_constraintTop_toBottomOf="@+id/tv_Ddireccion" />

    <TextView
        android:id="@+id/tv_Dtelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="156dp"
        android:text="@string/tv_Dtelefono"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toEndOf="@+id/imTelefono"
        app:layout_constraintTop_toBottomOf="@+id/tv_Demail" />

    <ImageView
        android:id="@+id/imMaps"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/im_google_maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Dtelefono"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/maps" />

    <ImageView
        android:id="@+id/imTwitter"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/im_twiter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/imMaps"
        app:layout_constraintTop_toBottomOf="@+id/tv_Dtelefono"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/imInstagram"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/im_instagram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imTwitter"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Dtelefono"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/instagram" />

    <ImageView
        android:id="@+id/imFB"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/im_fb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Dtelefono"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imEmail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/im_Demail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Ddireccion"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imTelefono"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/im_Dtelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imEmail"
        app:srcCompat="@drawable/telefono" />

</androidx.constraintlayout.widget.ConstraintLayout>