<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:clickable="true"
    android:focusable="true"
    android:gravity="fill_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tvname"
        android:textAlignment="gravity"
        android:textColor="@color/blue_300"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tvDireccion"
        android:textAlignment="gravity"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDistancia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvDistancia"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/blue_grey_600"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCategoria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvCategoria"
            android:textAlignment="viewEnd"
            android:textColor="@color/blue_grey_600"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>